# AutoNightFunkin

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: CMakeLists.txt  Main.cpp  calibration.cpp  hotkeymanager.cpp  keypresser.cpp  songstuff.cpp  theactualbot.cpp
src/lib/: hotkeymanager.hpp  keypresser.hpp  songstuff.hpp  theactualbot.hpp
tests/: CMakeLists.txt
tests/hotkeymanager/: CMakeLists.txt  Test.cpp
tests/keypresser/: CMakeLists.txt  holdtest.cpp  presstest.cpp
tests/songstuff/: CMakeLists.txt  test.cpp
tests/theactualbot/: CMakeLists.txt  constructortest.cpp  test.json
