add_executable(AutoNightFunkin main.cpp)
add_executable(Calibrator calibration.cpp)
add_library(HotkeyManager hotkeymanager.cpp lib/hotkeymanager.hpp)
add_library(KeyPresser keypresser.cpp lib/keypresser.hpp)
add_library(SongStuff songstuff.cpp lib/songstuff.hpp)
add_library(TheActualBot theactualbot.cpp lib/theactualbot.hpp)
include_directories(lib)
target_link_libraries(AutoNightFunkin HotkeyManager KeyPresser SongStuff TheActualBot winmm.lib)
target_link_libraries(Calibrator HotkeyManager KeyPresser SongStuff TheActualBot winmm.lib)